Fix completed relics not showing on first load
Extract style into sass file

Sort completed relics

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,165 +1,61 @@
-// This is a helper file to allow easily generating custom css that overrides the primary bootstrap color for text, buttons, dropdowns, lists.
+.set.completed {
+	opacity: 0.5;
+	border-image: linear-gradient(to bottom, gold, transparent 35%, transparent 90%, gold) 1!important;
+	transition: box-shadow ease-in-out 0.2s;
 
-//$base: hsl(351, 70%, 36%); // SoNaR
-// $base: hsl(345, 90%, 36%); // Zeebrieven
-$base: #337ab7 !default; // bootstrap blue;
-
-$sat-range: 100% - saturation($base);
-$light-range: lightness($base) * 0.5;
-
-$text: $base;
-$block-bg-1: $base;
-$block-bg-2: hsl(hue($base), saturation($base) + $sat-range / 4 * 1, lightness($base) - $light-range / 4 * 1);
-$block-bg-3: hsl(hue($base), saturation($base) + $sat-range / 4 * 2, lightness($base) - $light-range / 4 * 2);
-$block-bg-4: hsl(hue($base), saturation($base) + $sat-range / 4 * 3, lightness($base) - $light-range / 4 * 3);
-$block-border-1: $block-bg-2;
-$block-border-2: $block-bg-3;
-$block-border-3: $block-bg-4;
-$block-border-4: hsl(hue($base), saturation($base) + $sat-range / 4 * 4, lightness($base) - $light-range / 4 * 4);
-
-/** Below css was generated from style-template.scss */
-a,
-.btn-link,
-.text-primary {
-	&,
-	&:hover,
-	&:focus,
-	&:active {
-		// Don't !important here, <a> is very multifuctional and we don't want to always override it everywhere
-		color: $text;
-	}
-}
-
-.pagination > li {
-
-	>span,
-	>a {
-		color: $text!important;
+	.name {
+		color: gold!important;
+		text-shadow: 0px 0px 4px transparentize(gold, 0.7);
 	}
 
-	&.active,
-	&.current {
-		>span,
-		>a {
-			color: white!important;
-			background: $block-bg-1!important;
-			border-color: $block-bg-1!important;
-		}
-
-		>input {
-			color: $text!important;
-			border-color: $block-bg-1!important;
-		}
-		> .fa {
-			color: $text!important;
-			background: none!important;
-		}
+	&:hover {
+		box-shadow: 0px 0px 15px 2px gold!important;
 	}
 }
 
 
-.dropdown-menu > .active > a,
-.combobox-menu .menu-option.active {
-	background-color: $block-bg-2!important;
-}
+#completedrelics {
+	margin-top: 15px;
 
-ul.nav-tabs.cf-panel-tab-header {
-	background-color: $block-bg-1!important;
-	border-top-color: $block-bg-1!important;
-	border-bottom-color: $block-bg-1!important;
+	> ul {
+		list-style: none;
+		padding: 0;
+		margin: 0;
 
-	>li.active > a,
-	>li:not(.active):hover > a {
-		border-right-color: $block-bg-1!important;
-		border-left-color: $block-bg-1!important;
-	}
-}
+		> li {
+			display: inline-block;
+			padding: 0;
+			margin: 0;
 
-.group-size-indicator > .progress-bar {
-	background-color: $block-bg-1!important;
-}
+			> a {
+				padding: 4px 8px;
+				cursor: pointer;
 
-.panel-primary {
-	border-color: $block-border-1;
-	>.panel-heading {
-		background-color: $block-bg-1;
-	}
-}
+				&.active {
+					cursor: default;
+					color: var(--text);
+					font-weight: bold;
+				}
 
-.btn-primary,
-.open>.dropdown-toggle.btn-primary {
-	&,
-	&[disabled],
-	&.disabled {
-		background-color: $block-bg-1!important;
-		border-color: $block-border-1!important;
-	}
-
-	&:not([disabled]):not(.disabled) {
-		&:hover,
-		&:focus {
-			background-color: $block-bg-2!important;
-			border-color: $block-border-2!important;
-		}
-
-		&:active {
-			background-color: $block-bg-3!important;
-			border-color: $block-border-3!important;
-		}
-
-		&:active:focus {
-			background-color: $block-bg-4!important;
-			border-color: $block-border-4!important;
-		}
-	}
-}
-
-.list-group-item.active {
-	&,&:focus,&:hover {
-		background-color: $block-bg-1;
-		border-color: $block-bg-1
-	}
-}
-
-.groupby-editor-slider > .vue-slider  {
-
-	background: #ccc;
-
-	&:hover,
-	&:focus {
-		background: #bbb;
-	}
-	&:active {
-		background: #aaa;
-	}
-
-	> .vue-slider-process {
-		background: $block-bg-1;
-
-		&:hover,
-		&:focus {
-			background: $block-bg-2;
-		}
-		&:active {
-			background: $block-bg-3;
+				+ a {
+					margin-left: 15px;
+				}
+			}
 		}
 	}
 
-}
-.groupby-editor-slider-handle {
-	background-color: $block-bg-1;
-	border-color: $block-border-1;
+	.completed-relics-tab {
+		padding: 8px;
+		display: none;
+		&.active {
+			display: block;
+		}
 
-	&:hover,
-	&:focus {
-		background-color: $block-bg-2;
-		border-color: $block-border-2;
+		table, tr, th, td {
+			border-spacing: 0;
+			border: none;
+			padding: 0;
+			margin: 0;
+		}
 	}
-	&:active {
-		background-color: $block-bg-3;
-		border-color: $block-bg-3;
-	}
-
 }
-
-/** End style-template.scss */
